language/src/test/input/check/saga/saga.check
Missing: saga.riddl(5:5): Type 'AnotherThing' should have a description
Missing: saga.riddl(6:5): Type 'UndoAnotherThing' should have a description
Error: saga.riddl(7:5): Entity 'blah' must define a handler
Missing: saga.riddl(4:5): Type 'UndoSomething' should have a description
Missing: saga.riddl(3:5): Type 'Something' should have a description
Missing: saga.riddl(7:5): Entity 'blah' in Context 'ignore2' must have content.
Missing: saga.riddl(12:7): SagaAction 'Step1' should have a description
Missing: saga.riddl(19:7): SagaAction 'Step2' should have a description
